rtd theme: fix lack of space under lists inside admonitions.

--- a/sphinx/_static/css/rtd-theme-fix.css
+++ b/sphinx/_static/css/rtd-theme-fix.css
@@ -65,3 +65,9 @@
 	color:#fcfcfc;
 	text-decoration:inherit
 }
+
+/* Fix the lack of space underneath lists inside admonitions. */
+.rst-content div.admonition ul,
+.rst-content div.admonition ol > li {
+    padding-bottom: 0.5em;
+}
